# sales-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  CLEANUP_SUMMARY.md  Makefile  README.md  SpecMatcher.spec  alembic.ini  analyze_issues.py  build_exe.py  consensus_matcher.py  docker-compose.yml  enhanced_dictionary.py  feature_dictionary.db  feature_dictionary.py  fix_multiple_statements.py  fix_multiple_statements_v2.py  fix_whitespace.py  intelligent_matcher.py  launch_spec_matcher.bat  learning_dictionary.db  learning_sequential_mega.py  mega_matcher.py  prompt.txt  pyproject.toml  pytest.ini  ruff.toml  run_dual_pipeline.py  run_intelligent_match.py  run_pipeline.py  sequential_mega_matcher.py  setup_api_key.py  test_section_headers.py  text_normalizer.py  ui.py
.github/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docker/: Dockerfile.api  Dockerfile.worker
docs/: setup.md
docs/logs/: README.md  task-journal.md
docs/manual/: working-with-spec-kit.md
docs/reference/: project-map.md  tooling-registry.md
exports/BEV/: WARN_row_coercion.txt  audit_extracted_features_20250903-095326.txt  audit_extracted_features_20250903-095444.txt  audit_extracted_features_20250903-095552.txt  audit_matching_results_20250903-095326.txt  audit_matching_results_20250903-095444.txt  audit_matching_results_20250903-095552.txt  audit_user_prompt.txt  audit_user_prompt_EN.txt  audit_user_prompt_LV.txt  consensus_intelligent_match.csv  consensus_run_1.csv  consensus_run_2.csv  consensus_run_3.csv  (+34 more)
forhuman/: Staying_organized_and_productive.md  bugfixed.md  interesting.md  phasedone.md  steps1.md
masterlists/: BEV.csv  BEV_en.csv  EV.csv  EV_en.csv  EXAMPLE_en.csv  MCAFHEV.csv  MCAFHEV_en.csv  MCAICE.csv  MCAICE_en.csv  MCAPHEV.csv  MCAPHEV_en.csv
sessions/: MCAFHEV_input.txt  MCAPHEV_input.txt
tests/: conftest.py
(+303 files in other folders)
